common模块使用1.8编译