@@ -1,10 +1,15 @@
 package com.gin.common.utils.reflect;
 
-import org.springframework.util.ObjectUtils;
+import com.gin.jackson.utils.ObjectUtils;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * 字段差异
@@ -12,11 +17,15 @@ import java.util.List;
  * @version : v1.0.0
  * @since : 2023/2/22 10:19
  */
-public record FieldDifference<F, V>(
-        F field,
-        V beforeValue,
-        V updateValue
-) {
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+public class FieldDifference<F, V>{
+    F field;
+    V beforeValue;
+    V updateValue;
+
     /**
      * 合并两个字段和字段值列表,并过滤掉值相同的字段
      * @param before 修改前字段和字段值
@@ -27,14 +36,14 @@ public record FieldDifference<F, V>(
         final ArrayList<FieldDifference<Field, Object>> list = new ArrayList<>();
         for (FieldValue bfv : before) {
             // 字段
-            final Field field = bfv.field();
+            final Field field = bfv.getField();
             // 原字段值
-            final Object beforeValue = bfv.value();
+            final Object beforeValue = bfv.getValue();
             // 修改值
             final Object updateValue = update.stream()
-                    .filter(f -> f.field().equals(field))
-                    .map(FieldValue::value)
-                    .toList().get(0);
+                    .filter(f -> f.getField().equals(field))
+                    .map(FieldValue::getValue)
+                    .collect(Collectors.toList()).get(0);
             // 值不同的才加入
             if (!ObjectUtils.nullSafeEquals(beforeValue, updateValue)) {
                 list.add(new FieldDifference<>(field, beforeValue, updateValue));
